--- a/style.css
+++ b/style.css
@@ -22,22 +22,23 @@
 .heading-title {
   font-family: "Inter", sans-serif;
   font-weight: 700;
-  font-size: 4.505vw;
+  font-size: 65px;
 }
 
 .heading-description {
   font-family: "Poppins", sans-serif;
-  font-size: 1.247vw;
-  margin: 1.386vw 0 2.079vw;
+  font-size: 18px;
+  margin: 20px 0 30px;
 }
 
 .heading-button {
-  padding: 1.109vw 1.386vw;
+  padding: 16px 20px;
   background-color: #ff5959;
-  border-radius: 0.347vw;
+  border-radius: 5px;
   border: 0;
   font-family: "Inter", sans-serif;
   font-weight: 600;
-  font-size: 1.386vw;
+  font-size: 20px;
+  color: #ffffff;
 }
 /* header styles ends */
